finished core logic on all endpoints. next is testing, auth, and unit tests
